--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
     <section class="section activity">
       <div class="container">
-        <h2 class="title">Чим ми займаємося</h2>
+        <h2 class="title hiden">Чим ми займаємося</h2>
         <ul class="activity__list">
           <li class="activity__item">
             <img src="./images/computer.jpg" alt="computer" width="370" height="294" />
@@ -208,7 +208,7 @@
         <h2 class="title">Наша команда</h2>
         <ul class="team__list">
           <li class="team__thumb">
-            <img src="./images/spectacles.jpg" alt="man" width="270" height="260" />
+            <img src="./images/spectacles.jpg" alt="man" width="270" height="260" class="team__img"/>
             <div class="team__container">
               <h3 class="team__name">Ігор Дем'яненко</h3>
               <p class="team__job" lang="en">Product Designer</p>
@@ -241,7 +241,7 @@
             </div>
           </li>
           <li class="team__thumb">
-            <img src="./images/woman.jpg" alt="man" width="270" height="260" />
+            <img src="./images/woman.jpg" alt="man" width="270" height="260" class="team__img"/>
             <div class="team__container">
               <h3 class="team__name">Ольга Рєпіна</h3>
               <p class="team__job" lang="en">Frontend Developer</p>
@@ -274,7 +274,7 @@
             </div>
           </li>
           <li class="team__thumb">
-            <img src="./images/man_1.jpg" alt="man" width="270" height="260" />
+            <img src="./images/man_1.jpg" alt="man" width="270" height="260" class="team__img"/>
             <div class="team__container">
               <h3 class="team__name">Микола Тарасов</h3>
               <p class="team__job" lang="en">Marketing</p>
@@ -307,7 +307,7 @@
             </div>
           </li>
           <li class="team__thumb">
-            <img src="./images/man_3.jpg" alt="man" width="270" height="260" />
+            <img src="./images/man_3.jpg" alt="man" width="270" height="260" class="team__img"/>
             <div class="team__container">
               <h3 class="team__name">Михайло Єрмаков</h3>
               <p class="team__job" lang="en">UI Designer</p>
