--- a/index.html
+++ b/index.html
@@ -39,17 +39,18 @@
 
       <ul class="header__contacts contacts">
         <li class="contacts__item">
-          <a href="mailto:info@devstudio.com" class="navigation__link-contacts"><span
-              lang="en">info@devstudio.com</span>
+          <a href="mailto:info@devstudio.com" class="navigation__link-contacts">
             <svg class="contacts__icon">
               <use href="./images/icons.svg#icon-envelope-1"></use>
-            </svg></a>
+            </svg>
+            <span lang="en">info@devstudio.com</span></a>
         </li>
         <li class="contacts__item">
-          <a href="tel:+380961111111" class="navigation__link-contacts">+38 096 111 11 11
+          <a href="tel:+380961111111" class="navigation__link-contacts">
             <svg class="contacts__icon">
               <use href="./images/icons.svg#icon-smartphone-1"></use>
             </svg>
+            +38 096 111 11 11
           </a>
         </li>
       </ul>
