--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
           <label for="email-footer"></label>
           <input class="subscribe__input" type="email" name="email-footer" id="email-footer" placeholder="E-mail" />
           <button class="subscribe__submit" type="submit">
-            <span class="subscribe__wrap">Підписатися</span>
+            <span class="subscribe__wrapp">Підписатися</span>
             <svg class="subscribe__icon" width="24" height="24">
               <use href="./images/icons.svg#icon-icon-send"></use>
             </svg>
