--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <header class="header">
     <div class="header__container container">
-      <a href="#" class="header__logo logo"><span class="logo--web" lang="en">Web</span>Studio</a>
+      <a href="#" class="header__logo logo"><span class="logo--wrap" lang="en">Web</span>Studio</a>
       <nav>
         <ul class="header__navigation navigation">
           <li class="navigation__item">
