--- a/index.html
+++ b/index.html
@@ -60,65 +60,65 @@
   <!-- MAIN -->
 
   <main>
-    <section class="section order">
-      <div class="container">
-        <h1 class="order__text">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="order__button" data-modal-open>Замовити послугу</button>
+    <section class=" order">
 
-        <!-- MODAL -->
-
-        <div class="backdrop is-hidden" data-modal>
-          <div class="backdrop__modal">
-            <button class="close-button" type="button" data-modal-close>
-              <svg class="icon-close-button" width="11" height="11">
-                <use href="./images/icons.svg#icon-Vector-1"></use>
-              </svg>
-            </button>
-
-            <!-- MODAL-FORM -->
-
-            <form class="form">
-              <strong class="form__title">Залиште свої дані ми вам передзвонемо</strong>
-              <div class="form__field field">
-                <label class="field__name" for="name">Ім'я</label>
-                <span class="field__wrap"><input class="form__input" id="name" name="name" type="text" />
-                  <svg class="form__icon" width="18" height="18">
-                    <use href="./images/icons.svg#icon-person-black"></use>
-                  </svg></span>
-              </div>
-              <div class="form__field field">
-                <label class="field__name" for="tel">Телефон</label>
-                <span class="field__wrap"><input id="tel" name="tel" class="form__input" type="tel" />
-                  <svg class="form__icon" width="18" height="18">
-                    <use href="./images/icons.svg#icon-phone-black"></use>
-                  </svg></span>
-              </div>
-              <div class="form__field field">
-                <label class="field__name" for="email">Пошта</label>
-                <span class="field__wrap"><input class="form__input" id="email" name="email" type="email" />
-                  <svg class="form__icon" width="18" height="18">
-                    <use href="./images/icons.svg#icon-email-black"></use>
-                  </svg></span>
-              </div>
-              <div class="form__field field">
-                <label class="field__name" for="textarea">Коментар</label>
-                <textarea class="field__textarea" name="textarea" id="textarea" rows="8"
-                  placeholder="Введіть текст"></textarea>
-              </div>
-              <label class="custom-checkbox" for="checkbox">
-                <input class="custom-checkbox__input" id="checkbox" type="checkbox" />
-                <svg class="custom-checkbox__icon" width="16" height="16">
-                  <use class="custom-checkbox__text" href="./images/icons.svg#icon-checkbox"></use>
-                </svg>
-                Погоджуюсь з розсилкою та приймаю
-                <a href="#" class="custom-checkbox__link">Умови договору</a>
-              </label>
-              <button class="form__button--submit" type="submit">Відправити</button>
-            </form>
-          </div>
-        </div>
-      </div>
+      <h1 class="order__text">Ефективні рішення для вашого бізнесу</h1>
+      <button type="button" class="order__button" data-modal-open>Замовити послугу</button>
     </section>
+    <!-- MODAL -->
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="backdrop__modal">
+        <button class="close-button" type="button" data-modal-close>
+          <svg class="icon-close-button" width="11" height="11">
+            <use href="./images/icons.svg#icon-Vector-1"></use>
+          </svg>
+        </button>
+
+        <!-- MODAL-FORM -->
+
+        <form class="form">
+          <strong class="form__title">Залиште свої дані ми вам передзвонемо</strong>
+          <div class="form__field field">
+            <label class="field__name" for="name">Ім'я</label>
+            <span class="field__wrap"><input class="form__input" id="name" name="name" type="text" />
+              <svg class="form__icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg></span>
+          </div>
+          <div class="form__field field">
+            <label class="field__name" for="tel">Телефон</label>
+            <span class="field__wrap"><input id="tel" name="tel" class="form__input" type="tel" />
+              <svg class="form__icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg></span>
+          </div>
+          <div class="form__field field">
+            <label class="field__name" for="email">Пошта</label>
+            <span class="field__wrap"><input class="form__input" id="email" name="email" type="email" />
+              <svg class="form__icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg></span>
+          </div>
+          <div class="form__field field">
+            <label class="field__name" for="textarea">Коментар</label>
+            <textarea class="field__textarea" name="textarea" id="textarea" rows="8"
+              placeholder="Введіть текст"></textarea>
+          </div>
+          <label class="custom-checkbox" for="checkbox">
+            <input class="custom-checkbox__input" id="checkbox" type="checkbox" />
+            <svg class="custom-checkbox__icon" width="16" height="16">
+              <use class="custom-checkbox__text" href="./images/icons.svg#icon-checkbox"></use>
+            </svg>
+            Погоджуюсь з розсилкою та приймаю
+            <a href="#" class="custom-checkbox__link">Умови договору</a>
+          </label>
+          <button class="form__button--submit" type="submit">Відправити</button>
+        </form>
+      </div>
+    </div>
+
+
 
     <!-- ADVANTAGES -->
 
