--- a/index.html
+++ b/index.html
@@ -260,10 +260,11 @@
                     ./images/Desktop/img-2-desktop.jpg    1x,
                     ./images/Desktop/img-2-desktop@2x.jpg 2x
                   " />
-              <img src="./images/Desktop/img-2-desktop.jpg " alt="phone" width="370" height="294" />
-              <div class="activity__container">
-                <p class="activity__description">Мобільні додатки</p>
-              </div>
+            </picture>
+            <img src="./images/Desktop/img-2-desktop.jpg " alt="phone" width="370" height="294" />
+            <div class="activity__container">
+              <p class="activity__description">Мобільні додатки</p>
+            </div>
           </li>
           <li class="activity__item">
             <picture>
@@ -271,10 +272,11 @@
                     ./images/Desktop/img-3-desktop.jpg    1x,
                     ./images/Desktop/img-3-desktop@2x.jpg 2x
                   " />
-              <img src="./images/Desktop/img-3-desktop.jpg" alt="tablet" width="370" height="294" />
-              <div class="activity__container">
-                <p class="activity__description">Дизайнерські рішення</p>
-              </div>
+            </picture>
+            <img src="./images/Desktop/img-3-desktop.jpg" alt="tablet" width="370" height="294" />
+            <div class="activity__container">
+              <p class="activity__description">Дизайнерські рішення</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -295,12 +297,7 @@
               <source srcset="./images/mobile/ihor-mobile.jpg 1x, ./images/mobile/ihor-mobile@2x.jpg 2x"
                 media="(min-width: 280px)" />
 
-              <img
-                  src="./images/mobile/ihor-mobile.jpg"
-                  alt="man"
-
-                  class="team__img"
-                />
+              <img src="./images/mobile/ihor-mobile.jpg" alt="man" class="team__img" />
             </picture>
 
             <div class="team__container">
@@ -343,12 +340,7 @@
               <source srcset="./images/mobile/olha-mobile.jpg 1x, ./images/mobile/olha-mobile@2x.jpg 2x"
                 media="(min-width: 280px)" />
 
-              <img
-                  src="./images/mobile/olha-mobile.jpg"
-                  alt="man"
-
-                  class="team__img"
-                />
+              <img src="./images/mobile/olha-mobile.jpg" alt="man" class="team__img" />
             </picture>
             <div class="team__container">
               <h3 class="team__name">Ольга Рєпіна</h3>
@@ -386,20 +378,19 @@
               <source srcset="./images/Desktop/mykola.jpg 1x, ./images/Desktop/mykola@2x.jpg 2x"
                 media="(min-width: 1200px)" />
               <source srcset="
-                                ./images/tablet/mykola-tablet.jpg    1x,
-                                ./images/tablet/mykola-tablet@2x.jpg 2x
-                              " media="(min-width: 768px)" />
+                    ./images/tablet/mykola-tablet.jpg    1x,
+                    ./images/tablet/mykola-tablet@2x.jpg 2x
+                  " media="(min-width: 768px)" />
               <source srcset="
-                                ./images/mobile/mykola-mobile.jpg    1x,
-                                ./images/mobile/mykola-mobile@2x.jpg 2x
-                              " media="(min-width: 280px)" />
+                    ./images/mobile/mykola-mobile.jpg    1x,
+                    ./images/mobile/mykola-mobile@2x.jpg 2x
+                  " media="(min-width: 280px)" />
 
               <img
-
-                              src="./images/mobile/mykhailo-mobile.jpg"
-                              alt="This is Mykola"
-                            class="team__img"
-                            />
+                  src="./images/mobile/mykhailo-mobile.jpg"
+                  alt="This is Mykola"
+                  class="team__img"
+                />
             </picture>
             <div class="team__container">
               <h3 class="team__name">Ольга Рєпіна</h3>
@@ -437,20 +428,19 @@
               <source srcset="./images/Desktop/mykhailo.jpg 1x, ./images/Desktop/mykhailo@2x.jpg 2x"
                 media="(min-width: 1200px)" />
               <source srcset="
-                                ./images/tablet/mykhailo-tablet.jpg    1x,
-                                ./images/tablet/mykhailo-tablet@2x.jpg 2x
-                              " media="(min-width: 768px)" />
+                    ./images/tablet/mykhailo-tablet.jpg    1x,
+                    ./images/tablet/mykhailo-tablet@2x.jpg 2x
+                  " media="(min-width: 768px)" />
               <source srcset="
-                                ./images/mobile/mykhailo-mobile.jpg    1x,
-                                ./images/mobile/mykhailo-mobile@2x.jpg 2x
-                              " media="(min-width: 280px)" />
+                    ./images/mobile/mykhailo-mobile.jpg    1x,
+                    ./images/mobile/mykhailo-mobile@2x.jpg 2x
+                  " media="(min-width: 280px)" />
 
               <img
-                              class="team__img"
-                              src="./images/mobile/mykhailo-mobile.jpg"
-                              alt="This is Mykhailo"
-
-                            />
+                  class="team__img"
+                  src="./images/mobile/mykhailo-mobile.jpg"
+                  alt="This is Mykhailo"
+                />
             </picture>
             <div class="team__container">
               <h3 class="team__name">Ольга Рєпіна</h3>
