--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       </div>
 
-      <nav>
+      <nav class="navigation">
         <ul class="header__navigation navigation">
           <li class="navigation__item">
             <a href="./index.html" class="navigation__link navigation__link--selected"><span
