--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
           </button>
           <ul class="mobile-nav__list">
             <li class="mobile-nav__item">
-              <a class="mobile-nav__link current" href="">Студія</a>
+              <a class="mobile-nav__link current" href="./index.html">Студія</a>
             </li>
             <li class="mobile-nav__item">
-              <a class="mobile-nav__link" href="">Портфоліо</a>
+              <a class="mobile-nav__link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="mobile-nav__item">
-              <a class="mobile-nav__link" href="">Контакти</a>
+              <a class="mobile-nav__link" href="./index.html">Контакти</a>
             </li>
           </ul>
           <div class="mobile-menu__down-wrapp">
